@@ -1,0 +1,12 @@
+# To Do
+
+* Correct page height for thumbs
+* Scroll view: go to current page when entering mode; clamp at first and last
+
+* Constraints
+  * Thumbs: no zoom, no pan
+  * Scroll: can't zoom out much, can't pan up and down
+  * Book, Page: just the shown item
+* Resize on window resize
+* When going to thumbs, scroll to the proper part of the page
+* Show/hide pages?
