@@ -12,7 +12,15 @@
                 width: 100%;
                 height: 100%;
                 margin: 0;
+            }
+
+            body {
                 background: #eee;
+                overflow: scroll;
+            }
+
+            .header {
+                height: 30px;
             }
 
             .nav {
@@ -29,12 +37,18 @@
             }
 
             .openseadragon1 {
+                background: white;
+            }
+
+            .openseadragon1.full {
                 position: absolute;
                 left: 0;
                 top: 30px;
                 right: 0;
                 bottom: 0;
-                background: white;
+            }
+
+            .openseadragon1.thumbs {
             }
 
         </style>
